// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders - currency 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #112035;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c6 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
  border-color: #D2D2D2;
  padding-left: 12px;
  left: -10px;
  position: relative;
}

.c6::-webkit-input-placeholder {
  color: #636768;
}

.c6::-moz-placeholder {
  color: #636768;
}

.c6:-ms-input-placeholder {
  color: #636768;
}

.c6::placeholder {
  color: #636768;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6:hover,
.c6:focus-within {
  border-color: #D2D2D2;
}

.c5 {
  font-family: 'Circular',san-serif;
  font-size: 16px;
  line-height: 19px;
  position: relative;
  z-index: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: -3px;
  left: -60px;
}

.c8 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <span
        class="c4 c5"
        color="secondary"
        cursor="inherit"
        prefix="$"
        title=""
      >
        $
      </span>
      <input
        class="c6"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        prefix="$"
        type="number"
        value="50"
      />
      <div
        class="c7"
      >
        <button
          class="c8"
        >
          <span
            class="c9"
            color="subtext"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
        <button
          class="c8"
        >
          <span
            class="c10"
            color="subtext"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders - disabled 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: not-allowed;
  opacity: 0.5;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4:hover,
.c4:focus-within {
  border-color: #D2D2D2;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        disabled=""
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - error 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c11 {
  margin-top: 8px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #112035;
}

.c12 {
  font-size: 12px;
  font-weight: 400;
  line-height: 16px;
  text-align: left;
  cursor: inherit;
  color: #D82C2C;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c6 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D82C2C;
  color: #D82C2C;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
  border-color: #D2D2D2;
  padding-left: 12px;
  left: -10px;
  position: relative;
}

.c6::-webkit-input-placeholder {
  color: #636768;
}

.c6::-moz-placeholder {
  color: #636768;
}

.c6:-ms-input-placeholder {
  color: #636768;
}

.c6::placeholder {
  color: #636768;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6:hover,
.c6:focus-within {
  border-color: #D82C2C;
}

.c5 {
  font-family: 'Circular',san-serif;
  font-size: 16px;
  line-height: 19px;
  position: relative;
  z-index: 1;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  top: -3px;
  left: -60px;
}

.c8 {
  width: 24px;
  height: 24px;
  background-color: transparent;
  border: 0;
  padding: 0;
  cursor: pointer;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <span
        class="c4 c5"
        color="secondary"
        cursor="inherit"
        prefix="$"
        title=""
      >
        $
      </span>
      <input
        class="c6"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        prefix="$"
        type="number"
        value="200"
      />
      <div
        class="c7"
      >
        <button
          class="c8"
        >
          <span
            class="c9"
            color="subtext"
            rotate="180"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
        <button
          class="c8"
        >
          <span
            class="c10"
            color="subtext"
            rotate="0"
            size="24"
          >
            <svg
              fill="none"
              height="100%"
              viewBox="0 0 24 24"
              width="100%"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19.66 8.248a1 1 0 00-1.412.095L12 15.482l-6.248-7.14a1 1 0 10-1.504 1.317l7 8a.995.995 0 001.504 0l7-8a1 1 0 00-.093-1.411z"
                fill="#636768"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
  <span
    class="c11 c12"
    color="error"
    cursor="inherit"
    title=""
  >
    Oh gosh, this is an error isn't it!
  </span>
</div>
`;

exports[`renders - number 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c3 {
  font-size: 14px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #D82C2C;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c5 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
}

.c5::-webkit-input-placeholder {
  color: #636768;
}

.c5::-moz-placeholder {
  color: #636768;
}

.c5:-ms-input-placeholder {
  color: #636768;
}

.c5::placeholder {
  color: #636768;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5:hover,
.c5:focus-within {
  border-color: #D2D2D2;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="numberInput"
    title=""
  >
    Number
    <span
      class="c3"
      color="error"
      cursor="inherit"
      title=""
    >
      *
    </span>
  </label>
  <div
    class=""
  >
    <div
      class="c4"
    >
      <input
        class="c5"
        id="numberInput"
        name="numberInput"
        placeholder="0.00"
        type="number"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - tel 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #112035;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c6 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
  padding-left: 12px;
  left: -10px;
  position: relative;
}

.c6::-webkit-input-placeholder {
  color: #636768;
}

.c6::-moz-placeholder {
  color: #636768;
}

.c6:-ms-input-placeholder {
  color: #636768;
}

.c6::placeholder {
  color: #636768;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6:hover,
.c6:focus-within {
  border-color: #D2D2D2;
}

.c5 {
  font-family: 'Circular',san-serif;
  font-size: 16px;
  line-height: 19px;
  position: relative;
  z-index: 1;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="tel"
    title=""
  >
    Telephone number
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <span
        class="c4 c5"
        color="secondary"
        cursor="inherit"
        prefix="+44"
        title=""
      >
        +44
      </span>
      <input
        class="c6"
        id="tel"
        name="telephoneNumber"
        placeholder="07446875876"
        prefix="+44"
        type="tel"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`renders - with suffix 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c5 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #112035;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c4 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
}

.c4::-webkit-input-placeholder {
  color: #636768;
}

.c4::-moz-placeholder {
  color: #636768;
}

.c4:-ms-input-placeholder {
  color: #636768;
}

.c4::placeholder {
  color: #636768;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4:hover,
.c4:focus-within {
  border-color: #D2D2D2;
}

.c6 {
  font-family: 'Circular',san-serif;
  font-size: 16px;
  line-height: 19px;
  position: relative;
  z-index: 1;
  left: -10px;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <input
        class="c4"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        type="number"
        value=""
      />
      <span
        class="c5 c6"
        color="secondary"
        cursor="inherit"
        title=""
      >
        miles
      </span>
    </div>
  </div>
</div>
`;

exports[`renders - with trailing icon 1`] = `
.c1 {
  margin-bottom: 0px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
}

.c2 {
  font-size: 10px;
  line-height: 12px;
  font-weight: 500;
  text-transform: uppercase;
  text-align: left;
  cursor: inherit;
  color: #636768;
}

.c4 {
  font-size: 16px;
  font-weight: 400;
  line-height: 20px;
  text-align: left;
  cursor: inherit;
  color: #112035;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  width: 100%;
  border: 0;
}

.c6 {
  font-family: 'Circular',san-serif;
  border: none;
  border-bottom: 1px solid;
  border-color: #D2D2D2;
  color: #112035;
  font-size: 16px;
  width: 100%;
  outline: none;
  cursor: pointer;
  opacity: 1;
  padding: 1px 2px;
  padding-right: 60px;
  -moz-appearance: textfield;
  padding-left: 12px;
  left: -10px;
  position: relative;
}

.c6::-webkit-input-placeholder {
  color: #636768;
}

.c6::-moz-placeholder {
  color: #636768;
}

.c6:-ms-input-placeholder {
  color: #636768;
}

.c6::placeholder {
  color: #636768;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6:hover,
.c6:focus-within {
  border-color: #D2D2D2;
}

.c8 {
  position: relative;
  left: -24px;
}

.c5 {
  font-family: 'Circular',san-serif;
  font-size: 16px;
  line-height: 19px;
  position: relative;
  z-index: 1;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    color="subtext"
    cursor="inherit"
    for="currencyInput"
    title=""
  >
    Currency
  </label>
  <div
    class=""
  >
    <div
      class="c3"
    >
      <span
        class="c4 c5"
        color="secondary"
        cursor="inherit"
        prefix="$"
        title=""
      >
        $
      </span>
      <input
        class="c6"
        id="currencyInput"
        name="currencyInput"
        placeholder="100.00"
        prefix="$"
        type="number"
        value=""
      />
      <span
        class="c7 c8"
        color="subtext"
        rotate="0"
        size="24"
      >
        <svg
          fill="none"
          height="100%"
          viewBox="0 0 24 24"
          width="100%"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10a1 1 0 100-2c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8c0 1.103-.897 2-2 2s-2-.897-2-2c0-2.206-1.794-4-4-4s-4 1.794-4 4 1.794 4 4 4c1.2 0 2.266-.542 3-1.382.734.84 1.8 1.382 3 1.382 2.206 0 4-1.794 4-4 0-5.514-4.486-10-10-10zm0 12c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2z"
            fill="#636768"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
